--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,7 @@ more-itertools==7.0.0
 multidict==4.7.6
 plotly==4.13.0
 urllib3==1.24.1
-requests.py
+requests==2.21.0
+pandas==0.24.1
+pymongo==3.11.4
+numpy==1.16.1
