--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,8 @@
-async-timeout==3.0.1
-decorator==4.4.2
-discord-py-slash-command==1.2.0
 discord.py==1.7.2
-dnspython==1.16.0
-docopt==0.6.2
-docutils==0.14
-more-itertools==7.0.0
-multidict==4.7.6
-plotly==4.13.0
-urllib3==1.24.1
-requests==2.21.0
-numpy==1.16.1
 pandas==0.24.1
+numpy==1.16.1
+requests==2.21.0
 pymongo==3.11.4
+discord_py_slash_command==1.2.0
+discord==1.7.3
+python-dotenv==0.18.0
