--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-discord.py==1.7.2
-numpy==1.16.1
 requests==2.21.0
+pandas==1.1.5
+numpy==1.19.5
 pymongo==3.11.4
 discord_py_slash_command==1.2.0
+discord.py==1.7.2
 discord==1.7.3
 python-dotenv==0.18.0
